Fix issue with some icons being the wrong color

--- a/app/styles/components/audioplayer.scss
+++ b/app/styles/components/audioplayer.scss
@@ -1,4 +1,4 @@
-.audio-player-background               {@include css4{background-color:var(--audio-player-background);};min-height:10px;padding:2.5px;}
+.audio-player-background               {@include css4{background-color:var(--audio-player-background);color:var(--menu-font-color);};min-height:10px;padding:2.5px;}
 // General Audio Player Styles
 .audio-player-container .svgitem       {cursor:pointer;margin-right:18px;}
 .audio-player-container                {@include css4{background-color:var(--audio-player-background);};display:flex;justify-content:center;align-items:center;width:100%;height:50px;max-width:800px;margin:auto;:nth-child(3) {margin-right:18px;}}
